<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ArtDetailsFragment">

    <ImageView
        android:id="@+id/art_details_image"
        android:layout_width="182dp"
        android:layout_height="201dp"
        android:text="@string/hello_blank_fragment"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/art_details_art_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Name"
        android:layout_gravity="center"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/art_details_artist_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Artist"
        android:layout_gravity="center"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/art_details_year_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Year"
        android:layout_gravity="center"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/art_details_save_button"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="Save"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearText" />

</LinearLayout>